--- a/audio_python.rmd
+++ b/audio_python.rmd
@@ -167,7 +167,7 @@ print("probs_train",probs_train[:20].round(3))
 
 ## Plotting GMM Clusters for Test Data
 
-The plots bellow display's data points (individual songs) that are color coded based on the cluster they where assigned. This allows us to visualize the effect of different modifications to the GMM as described above as well as how the model is grouping the data. Ultimately we chose to use "full" for our actual song recommendations since there appeared to be very little variation between the models. I chose 12 categories based on previous research by (Berenzweig et al. 2004.)
+The plots bellow display's data points (individual songs) that are color coded based on the cluster they where assigned. This allows us to visualize the effect of different modifications to the GMM as described above as well as how the model is grouping the data. Ultimately we chose to use "full" for our actual song recommendations. I chose 12 categories based on existing documentation [(Berenzweig et al. 2004.)](https://www.ee.columbia.edu/~dpwe/pubs/BerenLEW04-museval.pdf)
 
 ```{r, eval = FALSE}
 fig = plt.figure()
