--- a/audio_python.rmd
+++ b/audio_python.rmd
@@ -8,7 +8,7 @@ title: "Music Recomendation System in Python"
 
 ## The Problem
 
-Given a data set of  1,500 + songs how can we analyze the audio content of these songs to make recommendations for new songs from a second data base of 1,500+ songs. It was also not allowed to use any metadata (song name etc.) to sort or identify songs. With this large of a data base a secondary challenge was developing an analysis method that would keep the run time to a minimum. This was, as professor Visell intended, a very vague problem description where many different approaches and solutions where possible. 
+Given a data set of  1,500 + songs how can Ianalyze the audio content of these songs to make recommendations for new songs from a second data base of 1,500+ songs. It was also not allowed to use any metadata (song name etc.) to sort or identify songs. With this large of a data base a secondary challenge was developing an analysis method that would keep the run time to a minimum. This was, as professor Visell intended, a very vague problem description where many different approaches and solutions where possible. 
 
 ## The Solution
 
@@ -17,15 +17,15 @@ into one of these ten groupings based on their audio characteristics. For exampl
 
 ## About Gaussian Mixture Models 
 
-Gaussian Mixtures are ideal for this problem since they allow for unsupervised learning which is necessity given that we don't know what is considered a correct classification. Since GMM is a probabilistic model that assumes all data points are generated from a mixture of finite number of Gaussian distributions it can clump the data into a defined number of groups. More specifically GMM works by creating ellipsoid functions around groupings of data and determining the likely hood that a point is contained in one data grouping over the other.
+Gaussian Mixtures are ideal for this problem since they allow for unsupervised learning which is necessity given that we don't know what is considered a correct classification. Since GMM is a probabilistic model, it assumes that all data points are generated from a mixture of a finite number of Gaussian distributions that can be clumped into a defined number of groups. More specifically, GMM works by creating ellipsoid functions around groupings of data and determining the likely hood that a point is contained in one data grouping over the other.
 
 
 ## Lets Get To Coding 
-- First we need to load in the songs from our data base.
-- Songs are loaded into a massive matrix using the Pandas library.
-- Then we need to extract the four features that we have chosen from Essentia .
-- Finally, the features extracted from many points within each song where apeanded to the row corresponding to each song and loaded into a csv file
-- Using the csv file to save features after they where calculated was a huge time saving feature. 
+- First, we load the songs from our data base.
+- Second songs are appended to a massive matrix using the Pandas library.
+- Then the four features that we have chosen from the Essentia library are extracted.
+- Finally, the features extracted from multiple points within each song are appended to the row corresponding to each song and loaded into a csv file.
+- Using the csv file to save features after they where calculated helped save allot of time. 
 
 ```{r, eval = FALSE}
 base_path = '/content/drive/Shared drives/ECE160-Visell-2020/Media Files/similarity_dataFolder'
@@ -82,7 +82,8 @@ pd.DataFrame(a).to_csv("/content/drive/My Drive/ECE160/f300.csv")
 
 ## Building the Data Set and Reading CSV files 
   - Here we organize the data from our CSV file and randomize it into test and training sets. 
-  - Keep in mind these are not the typical test and training sets since we won't be able to measure the accuracy in a quantifiable manner. The two sets are more to simulate the real world applpications of this program.
+  - Keep in mind these are not the typical test and training sets since we won't be able to measure the accuracy or our model, at least not quantitatively. The two sets are more to simulate the real world applications of this program.
+  - Note for our train and test split we do a 50:50 split. Typically the split is 70:30 however, I didn't want to exclude genres by overly reducing the size of the training data. Even when data is randomized, in my experience, things still tend to get "clumped" in certain areas. 
   
 ```{r, eval = FALSE}
   
@@ -104,8 +105,7 @@ pd.DataFrame(a).to_csv("/content/drive/My Drive/ECE160/f300.csv")
   
 ## Plotting Data 
 
-  - Note for our train and test split we do a 50:50 split. Typically the split is 70:30 however, we didn't want to start excluding genres by reducing the size of the training data too much. Even when data is randomized in my experience things still tend to get "clumped" in certain areas. Here we initially plot a 2D graph in order to get a sense of how the data is distributed. 
-
+  - Here we initially plot a 2D graph in order to get a sense of how the data is distributed. 
 -   I also created a smaller data set to test the model on before applying the full data set.
 
 ```{r, eval = FALSE}
@@ -148,6 +148,9 @@ Gaussian Mixture Types [(sklearn)](https://scikit-learn.org/stable/modules/gener
 -   Diag: each component has its own diagonal covariance matrix
 -   Spherical: each component has its own single variance
 
+12 categories or clusters where chosen based on existing documentation [(Berenzweig et al. 2004.)](https://www.ee.columbia.edu/~dpwe/pubs/BerenLEW04-museval.pdf)
+
+
 ```{r, eval = FALSE}
 X_train = X_train.drop(columns=['song_names'])
 X_test = X_test.drop(columns=['song_names'])
@@ -167,7 +170,7 @@ print("probs_train",probs_train[:20].round(3))
 
 ## Plotting GMM Clusters for Test Data
 
-The plots bellow display's data points (individual songs) that are color coded based on the cluster they where assigned. This allows us to visualize the effect of different modifications to the GMM as described above as well as how the model is grouping the data. Ultimately we chose to use "full" for our actual song recommendations. I chose 12 categories based on existing documentation [(Berenzweig et al. 2004.)](https://www.ee.columbia.edu/~dpwe/pubs/BerenLEW04-museval.pdf)
+The plots bellow display the data points or songs that are color coded based on the cluster they where assigned by the model. This allows us to visualize the effect of different modifications to the GMM. Ultimately, I chose to use "full" setting for our actual song recommendations. 
 
 ```{r, eval = FALSE}
 fig = plt.figure()
@@ -214,6 +217,7 @@ plt.title('Data Distribution for, GMM: spherical')
 
 ## Appending the song recomendations to a csv file 
 
+
 ```{r, eval = FALSE}
 lables_clusters = gmm.predict(X_train)
 cluster_matrix = pd.DataFrame(lables_clusters) 
@@ -244,4 +248,6 @@ song_test.to_csv("/content/drive/My Drive/ECE160/song_test.csv")
 
 ![](img/csv_data2.png){width=500px}
 
+## Citations 
 
+Berenzweig, A. (2004). A Large-Scale Evaluation of Acoustic and Subjective Music- Similarity Measures. Retrieved from https://www.ee.columbia.edu/~dpwe/pubs/BerenLEW04-museval.pdf
