New Project Page

--- a/projects.rmd
+++ b/projects.rmd
@@ -2,7 +2,7 @@
 title: "Projects"
 ---
 
-The projects shown below are summaries of projects I have completed for my classes and for fun. Further details can be found about each project by clicking on the heading.
+The projects shown below are summaries of projects I have completed for my classes and for fun. **Further details can be found about each project by clicking on each respective heading.**
 
 ## [Music Recomendation System in Python](audio_python.html)
   As part of project for a class, ECE 160- Multimedia Systems led by Yon Visell, I created a music recommendation system that analyzed the audio content of songs and then grouped those songs based on the similarities in their audio content. Check out the full project by clicking the heading above.
