New Project Page

--- a/cv.rmd
+++ b/cv.rmd
@@ -2,10 +2,12 @@
 title: "Andrea Anez"
 ---
 
+<center>
 Goleta CA 93117• (559)-909 9169 • anez@ucsb.edu • www.linkedin.com/in/andrea-anez
-
-
+</center>
+<center>
 **DOD Clearance Level: Secret, Top Secret investigation in process**
+</center>
 
 ## SUMMARY  
 <hr>
